<resources>
    <string name="app_name">Fastbook</string>
    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>

    <!-- Intent Extras -->
    <string name="profile_activity">Profile Activity</string>
    <string name="channel_name">Test channel name</string>
    <string name="channel_description">Test</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="read_now">Read Now</string>
    <string name="recommended">Recommended book for you!</string>
    <string name="proceed_to_read">Read Now ></string>
    <string name="description">Description</string>
    <string name="welcome">Welcome!</string>
    <string name="your_streak_is">Your Streak is  </string>
    <string name="days">day(s).</string>
    <string name="achievements">Achievements</string>
    <string name="more_achievements">More achievements coming soon!</string>
    <string name="explore_all">Explore all</string>
    <string name="top_in_hindi">Top books in Hindi</string>
    <string name="see_all">See All</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="you_earned_xp">You earned an extra 50 XP for finishing the book.</string>
    <string name="your_xp_is">Your XP is </string>

    <!-- Strings for Achievements -->
    <string name="streak_title">7 Day Streak</string>
    <string name="streak_description">Use fastbook continuously for 7 days</string>
    <string name="first_book_title">One Small Step</string>
    <string name="first_book_description">Finish reading your first book summary</string>
    <string name="profile_picture_title">Photogenic</string>
    <string name="profile_picture_description">Upload your profile picture</string>
    <string name="invite_title">I\'m popular</string>
    <string name="invite_description">Invite a friend to use the app</string>
    <string name="chapters_title">15 Chapters</string>
    <string name="chapters_description">Finish reading 15 chapters across all books</string>

</resources>