<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Profile.ProfileHomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/parentRelativeLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relLayout1">

            <include layout="@layout/snippet_top_profilebar"/>

        </RelativeLayout>




        <!-- **************************** Middle Section ********************** -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relLayout2"
            android:layout_below="@id/relLayout1"
            android:background="@drawable/white_grey_border_bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linLayout"
                android:paddingLeft="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/profile_photo"
                    android:src="@drawable/hindi_collection"
                    app:civ_border_color="@color/black"
                    android:layout_centerHorizontal="true"
                    app:civ_border_width="2dp"
                    android:layout_centerVertical="true"
                    android:padding="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/welcome" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="18sp"
                            android:layout_height="18sp"
                            android:src="@drawable/streak_lightning"
                            android:layout_gravity="center"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:text="@string/your_streak_is" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:id="@+id/streakLengthOnProfile"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/display_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:text="@string/days" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/achievement_title"
            android:layout_below="@+id/relLayout2"
            android:paddingLeft="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/achievement_title"
            android:id="@+id/achievement_recycler_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/more_achievements"
            android:layout_below="@id/achievement_recycler_view"
            android:layout_centerHorizontal="true"
            android:paddingTop="40dp"/>
    </RelativeLayout>
    <include layout="@layout/layout_bottom_navigation_view"/>
</RelativeLayout>
