<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.HomeActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relLayout2"
            android:paddingBottom="50dp">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".HomeActivity"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/relLayout1">

                        <include layout="@layout/snippet_top_homebar"/>

                    </RelativeLayout>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        app:cardCornerRadius="30dp"
                        android:layout_margin="20dp"
                        app:cardBackgroundColor="@color/blue"
                        android:id="@+id/todayscard"
                        android:layout_below="@id/relLayout1">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center_vertical"
                                android:id="@+id/left_text_view">

                                <TextView
                                    android:id="@+id/todaysbook"
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:fontFamily="@font/open_sans_bold"
                                    android:maxLines="2"
                                    android:padding="15dp"
                                    android:text="@string/recommended"
                                    android:textColor="@color/white"
                                    android:textSize="22dp"
                                    android:textStyle="bold"></TextView>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toEndOf="@+id/todaysbook"
                                    android:layout_toRightOf="@+id/todaysbook"
                                    android:fontFamily="@font/open_sans"
                                    android:padding="15dp"
                                    android:text="@string/proceed_to_read"
                                    android:textColor="@color/white"
                                    android:textSize="17dp" />
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/todaysImageView"
                                android:layout_width="80dp"
                                android:layout_height="120dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:scaleType="centerCrop"
                                android:layout_marginTop="35dp"
                                android:layout_marginEnd="31dp"
                                android:layout_marginRight="31dp"
                                android:layout_marginBottom="35dp"
                                android:background="@drawable/round_image"/>
                            />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/todayscard"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/explore_all"
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:textStyle="bold" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/heading"
                        android:id="@+id/recycler_view"
                        />

                    <TextView
                        android:id="@+id/heading2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recycler_view"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/top_in_hindi"
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:textStyle="bold" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/heading2"
                        android:id="@+id/recycler_view2"/>

                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>


        <include layout="@layout/layout_bottom_navigation_view"/>

        <ProgressBar
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:id="@+id/loadingPanel"
            android:indeterminate="true"
            android:layout_below="@id/heading"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

